--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                       </svg>
                   </button>
               </div>
-              <div class="text-xs py-2 pr-10 opacity-70">Free Research Preview. Ambalika.AI Developed By - (HARSH),(TUSHAR),(PRIYA)                  information about people, places, or facts.<a class="underline"
+              <div class="text-xs py-2 pr-10 opacity-70">Free Research Preview. Gemini.AI Developed By -(TUSHAR SINGH)                  information about people, places, or facts.<a class="underline"
                       href="https://help.openai.com/en/articles/6825453-Ambalika.AI-release-notes"> Ambalika.AI 2.4
                       Version</a></div>
           </div>
